tests/NormalTests/paczka2/big_fuzzy/41890023.err
Error in line 3: xwZE6v5eUxt S951 78,0
Error in line 7: JqeBC9NW A817 18,81
Error in line 10: utUos A817 9n,9
Error in line 8: utUos A817 59,1
Error in line 11: utUos S240 609,1
Error in line 16: fk2XkyCkn S951 68,2
Error in line 27: utUos A817 43,11
Error in line 30: fk2XkyCkn S951 98,39
Error in line 31: fk2XkyCkn S951 53,4
Error in line 34: utUos S951 5,8
Error in line 43: JqeBC9NW S240 5,7
Error in line 45: JqeBC9NW S509 59,7
Error in line 47: 3YI S509 76,0
Error in line 55: 3YI S240 5,3
Error in line 58: S509 S509 35,3
Error in line 59: 3YI S951 71,3
Error in line 60: fk2XkyCkn A817 97,6
Error in line 61: S509 S951 93,5
Error in line 42: xwZE6v5eUxt S509 288,6
Error in line 84: fk2XkyCkn S240 -4,6
Error in line 67: fk2XkyCkn S240 85,2
Error in line 96: JqeBC9NW A817 284,8
Error in line 116: fk2XkyCkn S509 19,8
Error in line 124: fk2XkyCkn S24] 2,3
Error in line 118: fk2XkyCkn S240 57,3
Error in line 134: xwZE6v5eUxt A817 111,2
Error in line 141: fk2XkyCkn S240 25,1
Error in line 131: S509 S509 27,6
Error in line 143: xwZE6v5eUxt S509 30,6
Error in line 159: 3YI S951 4,8
Error in line 161: utUos S509 70,2
Error in line 164: 3YI S509 -2,9
Error in line 153: xwZE6v5eUxt S951 89,2
Error in line 160: 3YI S509 28,6
Error in line 166: JqeBC9NW S951 1,7
Error in line 165: xwZE6v5eUxt S509 86,2
Error in line 170: X4rm6Gv2 S951 28,9
Error in line 185: xwZE6v5eUxt A817 37,6
Error in line 199: fk2XkyCkn A817 22,7
Error in line 191: JqeBC9NW S240 178,8
Error in line 204: S509 S240 64,2
Error in line 211: S509 A817 14,7
Error in line 213: JqeBC9NW S951 24,7
Error in line 208: utUos S240 49,2
Error in line 220: fk2XkyCkn S240 241,5
Error in line 227: JqeBC9NW S951 73,1
Error in line 231: 3YI S*51 0,8
Error in line 238: 3YI S509 40,08
Error in line 226: fk2XkyCkn A817 3,8
